--- a/libxmms/ChangeLog
+++ b/libxmms/ChangeLog
@@ -1,3 +1,7 @@
+2024-10-13  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* autoconf-m4/gettext.m4: Upgrade to gettext-0.22.5.
+
 2024-10-08  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
